<resources>
    <string name="app_name">NYTimesAPI</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nytimes_most_popular">NYTimes: Most Popular</string>
    <string name="tipo_de_articulo">Tipo de articulo</string>
    <string name="platform">Platform</string>
    <string name="periodo">Periodo</string>
    <string name="aceptar">Aceptar</string>
    <string name="news_title">News Title</string>
    <string name="news_author">News Author</string>
    <string name="news_section">News section</string>
    <string name="today">Today</string>
    <string name="todo">TODO</string>
</resources>