<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".presentation.ui.fragments.NewsFilterFragment">

    <TextView
        android:id="@+id/tvArticleTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nytimes_most_popular"
        android:textSize="26sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.37"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvArticleType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/tipo_de_articulo"
        android:textColor="@color/purple_500"
        app:layout_constraintStart_toStartOf="@+id/tvArticleTitle"
        app:layout_constraintTop_toBottomOf="@+id/tvArticleTitle" />

    <Spinner
        android:id="@+id/spArticleType"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/tvArticleType"
        app:layout_constraintTop_toBottomOf="@+id/tvArticleType" />

    <TextView
        android:id="@+id/tvArticleShared"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@android:drawable/editbox_background"
        android:text="@string/platform"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@+id/spArticleType"
        app:layout_constraintTop_toBottomOf="@+id/spArticleType"
        app:drawableEndCompat="@android:drawable/arrow_down_float" />

    <TextView
        android:id="@+id/tvArticlePeriod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/periodo"
        android:textColor="@color/purple_500"
        app:layout_constraintStart_toStartOf="@+id/tvArticleShared"
        app:layout_constraintTop_toBottomOf="@+id/tvArticleShared" />

    <Spinner
        android:id="@+id/spArticlePeriod"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="@+id/tvArticlePeriod"
        app:layout_constraintTop_toBottomOf="@+id/tvArticlePeriod"
        tools:ignore="SpeakableTextPresentCheck" />


    <Button
        android:id="@+id/btAccept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/aceptar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spArticlePeriod" />

</androidx.constraintlayout.widget.ConstraintLayout>